@@ -1,3 +1,7 @@
+Bucardo version 5.5.1, unreleased
+
+  - Add config option log_timer_format to glog() to customize timestamp output
+    [David Christensen, suggested by David Wheeler]
 
 Bucardo version 5.5.0, released November 5, 2018
 
